# htmx-ssr.rs

./: Cargo.toml
design/: app_routes.md
examples/: blocks.rs
htmxology/: Cargo.toml
htmxology-core/: Cargo.toml
htmxology-core/src/: lib.rs  route_method.rs  route_url.rs
htmxology-macros/: Cargo.toml
htmxology-macros/src/: route.rs
htmxology-macros/src/route/: mod.rs  route_info.rs  route_url.rs
htmxology/src/: route.rs
htmxology/src/server/: mod.rs
