[package]
name = "htmxology-core"
description = "Core types for htmxology"
version = "0.1.0"
edition = "2021"
authors = ["Julien Kauffmann"]
repository = "https://github.com/ereOn/htmxology.rs"
license-file = "../LICENSE"
keywords = ["htmx", "ssr", "web", "html", "axum"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "htmxology_core"

[dependencies]
thiserror.workspace = true
